# kiva

./: .codecov.yml  .cproject  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  COPYING.txt  ChangeLog.md  Kiva Debug.launch  Kiva Release.launch  README.md  appveyor.yml  mkdocs.yml
.github/actions/build-kiva/: action.yml
.github/workflows/: build_and_test.yml  release.yaml
BESTEST/GC10a/ADE/: Timeseries.csv  instance.yaml  log.out
BESTEST/GC10a/ADI/: Timeseries.csv  instance.yaml  log.out
BESTEST/GC10a/Explicit/: log.out
BESTEST/GC30a/: case.txt
BESTEST/GC30b/: case.txt
BESTEST/GC30c/: case.txt
BESTEST/GC40a/: ._case.txt  case.txt
BESTEST/GC60b/: case.txt
BESTEST/doc/: GC-InDepth-Out.xls  GC-InDepth-Results.doc  README-GC-InDepth.doc
BESTEST/scripts/: bestest_harmonic.py  bestest_ss.py  gen_bestest.py  init_methods.py
BESTEST/weather/: GCSS-W01TM2.epw  GCSS-W40TM2.epw
cmake/: Install.cmake  compiler-flags.cmake
docs/: bibliography.rst  conf.py  getting-started.md  getting-started.rst  index.md  index.rst  methodology.rst  mkdocs.yml  references.md  references.rst  testing.md  testing.rst
docs/input-def/: boundaries.rst  boundary-conditions.rst  foundation-advanced.rst  foundation.rst  index.rst  initialization.rst  input-def.md  input-def.rst  materials.rst  numerical-settings.rst  output.rst  simulation-control.md  simulation-control.rst
examples/: basement.yaml  crawlspace.yaml  indoor-temps.csv  slab.yaml  template.ptx  template.pxt
scripts/: Gemfile  clone-and-mimic.rb  lib.rb  log-results.rb  regress-test.rb  run-kiva.rb  run_test.rb  update-boost.py  utils.rb
source/: Algorithms.c++  Algorithms.h  CMakeLists.txt  ConvectionAlgorithms.c++  ConvectionAlgorithms.h  Domain.c++  Domain.h  Functions.c++  Functions.h  Geometry.c++  Geometry.h  Ground.c++  Ground.h  GroundPlot.c++  GroundPlot.h  Input.c++  Input.h  InputParser.c++  InputParser.h  Main.c++  Mesher.c++  Mesher.h  PixelCounter.c++  PixelCounter.h  Version.h.in  WeatherData.c++  WeatherData.h
src/core/: CMakeLists.txt  Functions.c++  Functions.h  Ground.c++  Ground.h  GroundPlot.h  Mesher.h  PixelCounter.h  WeatherData.c++
src/kiva/: CMakeLists.txt  GroundPlot.cpp  GroundPlot.hpp  Input.cpp  Input.hpp  InputParser.c++  InputParser.cpp  InputParser.hpp  Main.c++  Main.cpp  Simulator.cpp  Simulator.hpp  WeatherData.cpp  WeatherData.hpp
src/libgroundplot/: CMakeLists.txt  GroundPlot.cpp  GroundPlot.hpp
src/libkiva/: Aggregator.cpp  Aggregator.hpp  Algorithms.c++  Algorithms.cpp  Algorithms.hpp  BoundaryConditions.cpp  BoundaryConditions.hpp  CMakeLists.txt  Cell.cpp  Cell.hpp  Domain.cpp  Domain.h  Domain.hpp  Errors.cpp  Errors.hpp  Foundation.cpp  Foundation.hpp  Functions.cpp  Functions.hpp  Geometry.cpp  Geometry.hpp  Ground.c++  Ground.cpp  Ground.hpp  GroundOutput.hpp  Input.c++  Instance.cpp  Instance.hpp  Mesher.c++  Mesher.cpp  Mesher.hpp  PixelCounter.cpp  PixelCounter.hpp  Version.hpp.in
templates/: Rakefile  bestest.pxv  kiva.pxt  template.params
test/: CMakeLists.txt  Rakefile
test/BESTEST/: GC-InDepth-Out.xls  GCSP-W01TM2.epw  GCSP-W20TM2.epw  GCSS-W20TM2.epw  test.txt
test/BESTEST/Cases/GC10a/: GC10a.yaml
test/BESTEST/Cases/GC10a/ADE/: GC10a_ADE.yaml  Output.csv
test/BESTEST/Cases/GC10a/ADI/: GC10a_ADI.yaml  Output.csv
test/BESTEST/Cases/GC10a/CrankNicholson/: GC10a_CN.yaml  Output.csv
test/BESTEST/Cases/GC10a/Explicit/: GC10a_E.yaml  Output.csv
test/BESTEST/Cases/GC10a/Implicit/: GC10a_I.yaml  Output.csv
test/BESTEST/Cases/GC10a/SteadyState/: GC10a_SS.yaml  Output.csv
test/BESTEST/GC10a/: case.txt
test/BESTEST/GC10a/ADE/: Timeseries.csv  log.out  params.txt  soln.txt
test/BESTEST/GC10a/ADI/: Timeseries.csv  log.out  params.txt
test/BESTEST/GC10a/CrankNicolson/: Timeseries.csv  log.out
test/BESTEST/GC10a/Explicit/: instance.yaml  log.out  params.txt
test/BESTEST/GC10a/Implicit/: Timeseries.csv  log.out  params.txt
test/BESTEST/GC10a/SteadyState/: Timeseries.csv  instance.yaml  log.out  params.txt
test/BESTEST/GC30a/ADE/: Timeseries.csv  log.out
test/BESTEST/GC30a/ADI/: Timeseries.csv  log.out
test/BESTEST/GC30a/CrankNicolson/: Timeseries.csv  instance.yaml  log.out
test/BESTEST/GC30a/Explicit/: instance.yaml  log.out  soln.txt
test/BESTEST/GC30a/Implicit/: Timeseries.csv  log.out  soln.txt
test/BESTEST/GC30a/SteadyState/: Timeseries.csv  instance.yaml  log.out
test/BESTEST/GC30b/ADE/: log.out
test/BESTEST/GC30b/CrankNicolson/: log.out
test/BESTEST/GC30b/Explicit/: instance.yaml  log.out
test/BESTEST/GC30b/SteadyState/: Timeseries.csv  instance.yaml
test/BESTEST/GC30c/ADE/: log.out
test/BESTEST/GC30c/CrankNicolson/: instance.yaml
test/BESTEST/GC30c/Explicit/: instance.yaml  log.out
test/BESTEST/GC30c/Implicit/: Timeseries.csv  instance.yaml
test/BESTEST/GC30c/SteadyState/: instance.yaml  log.out  run.sh
test/BESTEST/GC60b/ADE/: Timeseries.csv  instance.yaml  log.out
test/BESTEST/GC60b/ADI/: Timeseries.csv  log.out
test/BESTEST/GC60b/CrankNicolson/: soln.txt
test/BESTEST/GC60b/Explicit/: log.out
test/BESTEST/GC60b/Implicit/: instance.yaml  log.out
test/BESTEST/GC60b/SteadyState/: log.out  soln.txt
test/BESTEST/GC65b/: case.txt
test/BESTEST/GC65b/ADE/: instance.yaml  log.out
test/BESTEST/GC65b/ADI/: instance.yaml  log.out
test/BESTEST/GC65b/CrankNicolson/: Timeseries.csv  log.out
test/BESTEST/GC65b/SteadyState/: instance.yaml  log.out
test/BESTEST/weather/: GCSP-W40TM2.epw
test/bestest/: GC10a.yaml  GC30a.yaml  GC30b.yaml  GC30c.yaml  GC40a.yaml  GC40b.yaml  GC40c.yaml  GC45b.yaml  GC45c.yaml  GC50b.yaml  GC55b.yaml  GC55c.yaml  GC60b.yaml  GC65b.yaml  GC70b.yaml  GC80b.yaml  GC80c.yaml
test/bestest/weather/: GCSP-W01TM2.epw  GCSP-W20TM2.epw  GCSP-W40TM2.epw  GCSS-W01TM2.epw  GCSS-W20TM2.epw  GCSS-W40TM2.epw
test/unit/: CMakeLists.txt  bestest.unit.cpp  cell_test.cpp  domain_test.cpp  foundation.unit.cpp  main.cpp
test/unit/fixtures/: aggregator-fixture.hpp  base-fixture.hpp  bestest-fixture.hpp  bestest.hpp  typical-fixture.hpp
weather/: USA_DC_Washington.epw
(+111 files in other folders)
